# minissd

./: CMakeLists.txt  README.md
include/nand/: nand_chip.h  nand_types.h  nand_utils.h
src/: main.cpp
src/nand/: nand_chip.c  nand_utils.c
